--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
 		"@rollup/plugin-commonjs": "^15.1.0",
 		"@rollup/plugin-node-resolve": "^9.0.0",
 		"@rollup/plugin-typescript": "^6.1.0",
+		"@types/node": "^16.11.6",
 		"@types/showdown": "^1.9.3",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
-		"@types/node": "^16.11.6",
+		"eslint": "8.5.0",
 		"obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
 		"rollup": "^2.32.1",
 		"showdown-highlight": "2.1.8",
