--- a/.eslintrc
+++ b/.eslintrc
@@ -1,21 +1,14 @@
 {
-	"root": true,
-	"parser": "@typescript-eslint/parser",
-	"plugins": ["@typescript-eslint"],
-	"extends": [
-		"eslint:recommended",
-		"plugin:@typescript-eslint/eslint-recommended",
-		"plugin:@typescript-eslint/recommended"
-	],
-	"parserOptions": {
-		"sourceType": "module"
-	},
-	"rules": {
-		"no-unused-vars": "off",
-		"@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
-		"@typescript-eslint/ban-ts-comment": "off",
-		"no-prototype-builtins": "off",
-		"@typescript-eslint/no-empty-function": "off"
-	}
+  "root": true,
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint"],
+  "rules": {}
 }
-
