--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "0.9.7",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
-	"scripts": {
-		"dev": "rollup --config rollup.config.js -w",
-		"build": "rollup --config rollup.config.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"@rollup/plugin-commonjs": "^15.1.0",
-		"@rollup/plugin-node-resolve": "^9.0.0",
-		"@rollup/plugin-typescript": "^6.1.0",
-		"@types/node": "^16.11.6",
-		"@types/showdown": "^1.9.3",
-		"@typescript-eslint/eslint-plugin": "^5.2.0",
-		"@typescript-eslint/parser": "^5.2.0",
-		"eslint": "8.5.0",
-		"obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
-		"rollup": "^2.32.1",
-		"showdown-highlight": "2.1.8",
-		"tslib": "^2.0.3",
-		"typescript": "^4.0.3"
-	},
-	"dependencies": {
-		"byte-base64": "^1.1.0",
-		"showdown": "^1.9.1",
-		"ts-md5": "^1.2.7"
-	}
+  "name": "obsidian-sample-plugin",
+  "version": "0.9.7",
+  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "main": "main.js",
+  "scripts": {
+    "dev": "rollup --config rollup.config.js -w",
+    "build": "rollup --config rollup.config.js",
+    "lint": "eslint --ext .ts .",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-typescript": "^6.1.0",
+    "@types/node": "^16.11.6",
+    "@types/showdown": "^1.9.3",
+    "@typescript-eslint/eslint-plugin": "5.8.1",
+    "@typescript-eslint/parser": "5.8.1",
+    "eslint": "8.5.0",
+    "eslint-config-prettier": "8.3.0",
+    "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
+    "prettier": "2.5.1",
+    "rollup": "^2.32.1",
+    "showdown-highlight": "2.1.8",
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "byte-base64": "^1.1.0",
+    "showdown": "^1.9.1",
+    "ts-md5": "^1.2.7"
+  }
 }
