--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
-    "compilerOptions": {
-        "lib": ["esnext", "dom"],
-        "downlevelIteration": true,
-        "target": "esnext",
-        "moduleResolution": "node",
-        "allowSyntheticDefaultImports": true,
-    }
+  "compilerOptions": {
+    "lib": ["esnext", "dom"],
+    "downlevelIteration": true,
+    "target": "esnext",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true
+  }
 }
